# stash

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pet.html  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  gc.yml
docs/: SECURITY.md
docs/architecture/: LAYERS.md
docs/golden-principles/: ERROR_HANDLING.md  IMPORTS.md  NAMING.md
docs/guides/: setup.md  testing.md
scripts/gc/: run.ts
specs/: build-state.json  decisions.json  discover.json  discover_history.json  discover_review.json  spec_review.json  tests.json  tests_review.json
specs/discover/: history.json  index.json  requirements.json  scenarios.json
specs/mockups/: 2026-04-07-183840-this-session-is-being-continued-from-a-previous-c.txt  card-base.html  card-r3-forest.html  card-r3-muted-cyber.html  card-r3-twilight.html  index.html  (+24 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: e2e_tests.rs  lib.rs  main.rs
src-tauri/src/brain/: compressor.rs  distiller.rs  errors.rs  mod.rs  state_machine.rs  tests.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/commands/: mod.rs  window.rs
src-tauri/src/db/: Cargo.toml  mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/events/: mod.rs
src-tauri/src/intent/: mod.rs
src-tauri/src/llm/: Cargo.toml  mod.rs
src-tauri/src/platform/: git_ops.rs  mod.rs  stub.rs  tests.rs  x11_bridge.rs
src-tauri/src/watcher/: git_monitor.rs  jsonl.rs  mod.rs  tests.rs
src-tauri/tests/: architecture.rs
(+60 files in other folders)
