[package]
name = "stash"
version = "0.1.0"
edition = "2021"

[lib]
name = "stash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stash"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
notify = "7"
git2 = "0.19"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
dirs = "6"
open = "5"
