[package]
name = "stash-db-module"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
